--- a/source/tasks/Makefile.am
+++ b/source/tasks/Makefile.am
@@ -5,10 +5,10 @@ AM_CXXFLAGS          = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@
 
 noinst_LTLIBRARIES 	= libtasks.la libtaskcore.la
 
-libtaskcore_la_SOURCES	= task.cpp taskhibernatingcontainer.cpp 
+libtaskcore_la_SOURCES	= abstracttaskcontainer.cpp taskhibernatingcontainer.cpp 
 libtaskcore_la_LIBADD	= @SDL_LIBS@
 
-libtasks_la_SOURCES	= unittask.cpp  task.cpp task_generator.cpp moveunittask.cpp taskcontainer.cpp 
+libtasks_la_SOURCES	= abstracttaskcontainer.cpp taskcontainer.cpp
 libtasks_la_LIBADD	= @SDL_LIBS@
 
 EXTRA_DIST=$(srcdir)/*.h
