--- a/source/tasks/Makefile.in
+++ b/source/tasks/Makefile.in
@@ -47,11 +47,11 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libtaskcore_la_DEPENDENCIES =
-am_libtaskcore_la_OBJECTS = task.lo taskhibernatingcontainer.lo
+am_libtaskcore_la_OBJECTS = abstracttaskcontainer.lo \
+	taskhibernatingcontainer.lo
 libtaskcore_la_OBJECTS = $(am_libtaskcore_la_OBJECTS)
 libtasks_la_DEPENDENCIES =
-am_libtasks_la_OBJECTS = unittask.lo task.lo task_generator.lo \
-	moveunittask.lo taskcontainer.lo
+am_libtasks_la_OBJECTS = abstracttaskcontainer.lo taskcontainer.lo
 libtasks_la_OBJECTS = $(am_libtasks_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -247,9 +247,9 @@ zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ 
 noinst_LTLIBRARIES = libtasks.la libtaskcore.la
-libtaskcore_la_SOURCES = task.cpp taskhibernatingcontainer.cpp
+libtaskcore_la_SOURCES = abstracttaskcontainer.cpp taskhibernatingcontainer.cpp 
 libtaskcore_la_LIBADD = @SDL_LIBS@
-libtasks_la_SOURCES = unittask.cpp  task.cpp task_generator.cpp moveunittask.cpp taskcontainer.cpp 
+libtasks_la_SOURCES = abstracttaskcontainer.cpp taskcontainer.cpp
 libtasks_la_LIBADD = @SDL_LIBS@
 EXTRA_DIST = $(srcdir)/*.h
 all: all-am
@@ -306,12 +306,9 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moveunittask.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/task.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/task_generator.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/abstracttaskcontainer.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/taskcontainer.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/taskhibernatingcontainer.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unittask.Plo@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
