--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -203,6 +203,10 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm"
 			>
 			<File
+				RelativePath="..\..\..\tasks\abstracttaskcontainer.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\accessconstraints-editor.cpp"
 				>
 			</File>
@@ -553,6 +557,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\strtmesg.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\tasks\taskhibernatingcontainer.cpp"
 				>
 			</File>
 			<File
