Changed version numbers  Improved unit test  changed size of map command icons

--- a/source/unittests/Makefile.am
+++ b/source/unittests/Makefile.am
@@ -7,7 +7,7 @@ noinst_LTLIBRARIES 	= libunittests.la
 
 libunittests_la_SOURCES	= movementtest.cpp attacktest.cpp unittestutil.cpp main.cpp ai-move1.cpp viewtest.cpp ai-service1.cpp transfercontroltest.cpp \
                           recyclingtest.cpp diplomacytest.cpp researchtest.cpp objectconstructiontest.cpp actiontest.cpp eventtest.cpp jumptest.cpp \
-                          testversionidentifier.cpp streamencoding.cpp
+                          testversionidentifier.cpp streamencoding.cpp maptest.cpp
                           
 libunittests_la_LIBADD	= @SDL_LIBS@
 
