--- a/Makefile.in
+++ b/Makefile.in
@@ -39,7 +39,7 @@ DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/asc.suse.spec.in $(srcdir)/config.h.in \
 	$(srcdir)/getmusic.in $(top_srcdir)/configure AUTHORS COPYING \
 	ChangeLog INSTALL TODO config.guess config.sub depcomp \
-	install-sh ltmain.sh missing mkinstalldirs ylwrap
+	install-sh ltmain.sh missing mkinstalldirs
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/acinclude.m4 \
 	$(top_srcdir)/configure.in
@@ -240,6 +240,8 @@ datarootdir = @datarootdir@
 docdir = @docdir@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
+extradatadir = @extradatadir@
+extradatainclude = @extradatainclude@
 freetype_config = @freetype_config@
 host = @host@
 host_alias = @host_alias@
@@ -278,7 +280,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
-SUBDIRS = source data doc installer unittester
+SUBDIRS = source data doc installer unittester @extradatadir@
 EXTRA_DIST = asc.kdevelop AUTHORS COPYING ChangeLog INSTALL README TODO asc.lsm bootstrap asc.suse.spec
 AUTOMAKE_OPTIONS = foreign
 all: config.h
