--- a/source/libs/paragui/src/Makefile.in
+++ b/source/libs/paragui/src/Makefile.in
@@ -246,6 +246,8 @@ datarootdir = @datarootdir@
 docdir = @docdir@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
+extradatadir = @extradatadir@
+extradatainclude = @extradatainclude@
 freetype_config = @freetype_config@
 host = @host@
 host_alias = @host_alias@
