Updated windows build

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -987,6 +987,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\actions\actionavailability.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\actions\actioncontainer.cpp"
 					>
 				</File>
