--- a/Makefile.in
+++ b/Makefile.in
@@ -807,11 +807,11 @@ unitguide:
 SWIG: 
 	cd source/lua && make SWIG	
 
-cvstag:
-	cvs tag ASC`scripts/getversion source/strtmesg.cpp | sed s/\\\\./-/g`
+hgtag:
+	hg tag ASC`scripts/getversion source/strtmesg.cpp | sed s/\\\\./-/g`
 
-cvspbptag:
-	scripts/pbptag
+hgpbptag:
+	hg tag -f PBP
 
 dist-hook:
 	rm -rf `find $(distdir) -name CVS -o -name "*.ascdat" -o -name asc2_dlg.zip -o -name "*~" -o -name .cvsignore -o -name ".#*"`
