--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -16,7 +16,7 @@ libdialogs_la_LIBADD    = @SDL_LIBS@
 libgamedialogs_la_SOURCES   = cargodialog.cpp unitcounting.cpp cargowidget.cpp ammotransferdialog.cpp attackpanel.cpp vehicletypeselector.cpp nextcampaignmap.cpp \
                               editplayerdata.cpp buildingtypeselector.cpp choosetech.cpp productionanalysis.cpp internalAmmoTransferDialog.cpp replayrecorder.cpp \
                               mailoptionseditor.cpp vehicleproductionselection.cpp infodialogs.cpp actionmanager.cpp gotoposition.cpp taskmanager.cpp \
-                              actionwidget.cpp
+                              actionwidget.cpp unitnaming.cpp
                               
 libgamedialogs_la_LIBADD    = @SDL_LIBS@ 
 
