--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -895,6 +895,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\dialogs\unitnaming.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\dialogs\vehicleproductionselection.cpp"
 					>
 				</File>
@@ -1152,6 +1156,10 @@
 				</File>
 				<File
 					RelativePath="..\..\..\actions\removeproductionlinecommand.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\renamecontainercommand.cpp"
 					>
 				</File>
 				<File
